# gtest-c

./: CMakeLists.txt  LICENSE  README.md  main.c
src/: CMakeLists.txt
src/module1/: CMakeLists.txt
test/: CMakeLists.txt  test_module1.cc
